# FlagBLAS

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README_cn.md  pyproject.toml  setup.sh
.github/: labeler.yml
.github/workflows/: backend-test.yaml  build-check.yml  build-deb.yml  build-rpm.yml  code-format-check.yml  release.yaml  triage.yaml  unittest.yaml
benchmark/: attri_util.py  conftest.py  consts.py  core_shapes.yaml  performance_utils.py  summary_for_plot.py  test_abs_perf.py  test_amax_perf.py  test_amin_perf.py  test_asum_perf.py  test_axpy_perf.py  test_cgemm_perf.py  test_copy_perf.py  test_dgemm_perf.py  test_dot_perf.py  test_dotc_perf.py  test_dotu_perf.py  test_gbmv_perf.py  test_gemm_perf.py  test_gemv_perf.py  test_group_gemm_perf.py  test_hbmv_perf.py  test_hemv_perf.py  test_nrm2_perf.py  test_rot_perf.py  test_sbmv_perf.py  test_scal_perf.py  test_spmv_perf.py  test_swap_perf.py  test_symv_perf.py  test_tbmv_perf.py  test_tbsv_perf.py  test_tpmv_perf.py  test_trmv_perf.py  test_zgemm_perf.py
conf/: operators.yaml
docs/: dispatch.md  dispatch_cn.md  static_dispatch.md  static_dispatch_cn.md
packaging/: INSTALL.md  NOTES.md
packaging/debian/: changelog  control  copyright  rules
packaging/debian/build-helpers/: Dockerfile.deb  build-flag-blas.sh
packaging/rpm/: build-flag-blas-rpm.sh
packaging/rpm/dockerfiles/: Dockerfile.rpm
packaging/rpm/specs/: flag-blas.spec
src/flag_blas/: __init__.py  config.py
src/flag_blas/ops/: __init__.py  axpy.py  demo_op.py
src/flag_blas/ops/level1/: abs.py  amax.py  amin.py  asum.py  axpy.py  copy.py  dot.py  dotc.py  dotu.py  nrm2.py  rot.py  scal.py  swap.py
src/flag_blas/ops/level2/: _constants.py  gbmv.py  gemv.py  hbmv.py  hemv.py  sbmv.py  spmv.py  symv.py  tbmv.py  tbsv.py  tpmv.py  trmv.py
src/flag_blas/ops/level3/: __init__.py  cgemm.py  dgemm.py  gemm.py  gemm_shape_classifier.py  group_gemm.py  zgemm.py
src/flag_blas/runtime/: __init__.py  configloader.py  dispatch.py  dispatcher.py  error.py  register.py  shape_classifier.py
src/flag_blas/runtime/backend/: __init__.py  backend_utils.py  device.py  dispatch.py
src/flag_blas/runtime/backend/_iluvatar/: __init__.py  tune_configs.yaml
src/flag_blas/runtime/backend/_nvidia/: __init__.py  enable_configs.yaml  tune_configs.yaml
src/flag_blas/testing/: __init__.py
src/flag_blas/utils/: __init__.py  code_cache.py  codegen_config_utils.py  device_info.py  libentry.py  pointwise_dynamic.py  random_utils.py  shape_utils.py  tensor_wrapper.py  triton_driver_helper.py  triton_lang_extension.py  triton_lang_helper.py
src/flag_blas/utils/models/: sql.py
tests/: __init__.py  accuracy_utils.py  conftest.py  run_axpy.sh  run_scal.sh  test_abs.py  test_amax.py  test_amin.py  test_asum.py  test_axpy.py  test_bfgemm.py  test_cgemm.py  test_copy.py  test_dgemm.py  test_dot.py  test_dotc.py  test_dotu.py  test_fp8gemm.py  test_gbmv.py  test_gemm.py  test_gemv.py  test_group_gemm.py  test_hbmv.py  test_hemv.py  test_hgemm.py  test_nrm2.py  test_rot.py  test_sbmv.py  test_scal.py  test_sgemm.py  test_spmv.py  test_swap.py  test_symv.py  test_tbmv.py  test_tbsv.py  test_tpmv.py  test_trmv.py  test_zgemm.py
tools/: consts.py  run_op.sh  run_tests.py  run_tests.sh  set-env.sh  setup_vendor.sh
(+12 files in other folders)
